2011-01-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* plot/__fltk_ginput__.m (ginput_aggregator): New arg, button.
	Change all uses.
	(ginput_keypressfcn): Save keypress info.

2010-01-29  Rik  <octave@nomad.inbox5.com>

	* plot/gnuplot_binary.in: Improve docstring

2010-01-29  Rik  <octave@nomad.inbox5.com>

	* general/accumarray.m: Add seealso reference to accumdim.

2010-01-29  Rik  <octave@nomad.inbox5.com>

	* set/powerset.m: Improve docstring.

2010-01-29  Rik  <octave@nomad.inbox5.com>

	* miscellaneous/copyfile.m, miscellaneous/movefile.m,
	miscellaneous/tempname.m: Improve docstrings

2010-01-29  Rik  <octave@nomad.inbox5.com>

	* deprecated/module.mk, image/module.mk: Deprecate saveimage.m.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* optimization/glpkmex.m: Add seealso reference to glpk.

2011-01-29  Rik  <octave@nomad.inbox5.com>

	* miscellaneous/compare_versions.m: Allow only "==" equality operator.
	Add input validation tests.  Improve docstring.

	* miscellaneous/ver.m, miscellaneous/version.m, path/matlabroot.m:
	Improve docstring.

2011-01-29  Ben Abbott  <bpabbott@mac.com>

	* miscellaneous/edit.m: As most editors open their own window, change
	mode to "async".

2011-01-28  Ben Abbott  <bpabbott@mac.com>

	* plot/__fltk_print__.m, plot/print.m: Fix {eps,ps,pdf}latexstandalone
	printing for fltk, bug 32262.

2011-01-28  John W. Eaton  <jwe@octave.org>

	* sparse/svds.m: Use "test" instead of "testif HAVE_ARPACK".

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* plot/whitebg.m: Improve docstring.

2011-01-27  Rik  <octave@nomad.inbox5.com>

	* geometry/trimesh.m, geometry/triplot.m, geometry/trisurf.m: Add
	undocumented function trisurf to documentation.  Update seealso
	strings.

2011-01-27  John W. Eaton  <jwe@octave.org>

	* general/rat.m: Move @seealso inside @deftypefn in docstring.

2011-01-27  Kai Habel  <kai.habel@gmx.de>

	* plot/uigetfile.m, plot/uiputfile.m, plot/uigetdir.m: Check
	for __fltk_uigetfile__.
